welcome.lessons.welcome.array.array667.Array667.scala.error
array667:9: error: not found: value x
		if(nums(x)==6 && nums(x+1)==6) j=j+1
                        ^